syntax = "proto2";
package server;
import "common.proto";

service Node {
    rpc ClientSet(SetParams) returns (Feedback){}
    rpc ClientGet(GetParams) returns (Feedback){}
    rpc CommitTransaction(Transaction) returns (Feedback) {}
    rpc AbortTransaction(Transaction) returns (Feedback) {}
}

message GetParams{
    required string transactionID = 1;
    required string server_identifier = 2;
    required string object_name = 3;
}

message SetParams {
    required string transactionID = 1;
    required string server_identifier = 2;
    required string object_name = 3;
    required string value = 4;
}